// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root"
>
  <div />
</div>
`;

exports[`rendering renders correctly with children 1`] = `
<div
  className="root"
>
  <div>
    <div>
      test
    </div>
  </div>
</div>
`;
